2007-02-07  Derek Scherger  <derek@echologic.com>

	* commands.cc: 
	* roster.cc:
	replace references to localized_file_io.hh with file_io.hh

2007-02-07  Derek Scherger  <derek@echologic.com>

	* NEWS: add note about the removal of the charset and line
	separator hooks

2007-02-07  Daniel Carosone  <dan@geek.com.au>

	* rename tests {update,checkout}_clobbers_workspace to
	_does_not_clobber_workspace, because they now no longer do.
	* add a corollary pluck_does_not_clobber_workspace
	
2007-02-07  Nathaniel Smith  <njs@pobox.com>

	* tests/ls_unknown_in_subdir: Update test to match new
	non-recursiveness of ls unknown.

2007-02-07  Derek Scherger  <derek@echologic.com>

	* Makefile.am (localized_file_io.{cc,hh}): remove
	* cmd_diff_log.cc:
	* cmd_files.cc:
	* cmd_ws_commit.cc:
	* diff_patch.cc:
	* work.cc:
	replace calls to read_localized_data with read_data
	replace calls to write_localized_data with write_data
	remove lua arg from calls to ident_existing_file and 
	calculate_ident
	* file_io.{cc,hh} (ident_existing_file, calculate_ident): move
	here from localized_file_io.{cc,hh}
	* lua_hooks.{cc,hh} (hook_get_system_linesep,
	hook_get_charset_conv, hook_get_linesep_conv): remove
	* localized_file.{cc,hh}: remove
	* monotone.texi: remove charset/linesep sections
	* simplestring_xform.{cc,hh} (line_end_convert): remove
	* testsuite.lua (use_get_linesep_hook, files_with_non-utf8_data):
	remove

2007-02-07  Daniel Carosone  <dan@geek.com.au>

	* tests/db_kill_rev_and_recommit/__driver__.lua/: add a test
	(xfail'ed, until fixed) for a bug (#18990) I just tripped over,
	whereby db_kill_rev_locally doesn't seem to kill enough.
	
2007-02-07  Markus Schiltknecht  <markus@bluegap.ch>

	* tests/test_a_merge_8/__driver__.lua: okay, sorry, that didn't work,
	second try in adding xfail() to that test.

2007-02-07  Markus Schiltknecht  <markus@bluegap.ch>

	* tests/test_a_merge_8/__driver__.lua: added xfail() and a bug id,
	so that current tests run through fine.
