@@ -1,3 +1,7 @@
+2007-02-07  Matthew Gregan  <kinetik@orcon.net.nz>
+
+	* win32/fs.cc (rename_clobberingly_impl): GNU style.
+
 2007-02-07  Derek Scherger  <derek@echologic.com>
 
 	* commands.cc: 
